fix: adjust padding and alignment in main section for improved layout consistency

--- a/src/styles/mainSection.css
+++ b/src/styles/mainSection.css
@@ -7,16 +7,17 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 
   padding: 1rem;
   box-sizing: border-box;
   color: #1e3a8a;
   font-family: Arial, sans-serif;
+  margin: 0;
 
   width: 100vw;
-  /* height: 70vh; */
+  height: 90vh;
   /* min-height: 80dvh; */
   text-align: center;
 }
@@ -69,7 +70,7 @@
 /* Responsive adjustments */
 @media (min-width: 768px) {
   .main-section {
-    padding: 3rem;
+    padding: 1rem;
   }
   .main-section p {
     max-width: 70%;
@@ -80,12 +81,12 @@
     max-width: 60%;
   }
   .timer-wrapper {
-    padding: 2rem;
+    padding: 1rem;
   }
 }
 @media (min-width: 1440px) {
   .main-section {
-    padding: 4rem;
+    padding: 1.5rem;
   }
 
   .main-section p {
